--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lightweight-charts": "^5.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
     "viem": "^2.25.0",
     "wagmi": "^2.14.16"
